--- a/index.html
+++ b/index.html
@@ -5,59 +5,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div id="Welcome">
-    <h1>Pat's Salmon Cookies</h1>
-  </header>
-  <div id="PikePlace">
-    <ul><h2>Pike Place</h2>
-      <!-- min customers -->
-      <li>17</li>
-      <!-- max customers-->
-      <li>88</li>
-      <!-- avg cookie sales -->
-      <li>5.2</li>
-    </ul>
-  </div>
-  <div id="SeaTac">
-    <ul><h2>SeaTac Airport</h2>
-      <!-- min customers -->
-      <li>6</li>
-      <!-- max customers-->
-      <li>24</li>
-      <!-- avg cookie sales -->
-      <li>1.2</li>
-    </ul>
-  </div>
-  <div id="Southcenter">
-    <ul><h2>Southcenter</h2>
-      <!-- min customers -->
-      <li>11</li>
-      <!-- max customers-->
-      <li>38</li>
-      <!-- avg cookie sales -->
-      <li>1.9</li>
-    </ul>
-  </div>
-  <div id="BellevueSquare">
-    <ul><h2>Bellevue Square</h2>
-      <!-- min customers -->
-      <li>20</li>
-      <!-- max customers-->
-      <li>48</li>
-      <!-- avg cookie sales -->
-      <li>3.3</li>
-    </ul>
-  </div>
-  <div id="Alki">
-    <ul><h2>SeaTac Airport</h2>
-      <!-- min customers -->
-      <li>6</li>
-      <!-- max customers-->
-      <li>24</li>
-      <!-- avg cookie sales -->
-      <li>1.2</li>
-    </ul>
+  <div id="store_data">
+    <p>Store data</p>
   </div>
   <script src="app.js"></script>
 </body>
