obj literal pike place

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="store_data">
-    <p>Store data</p>
-  </div>
+  <ul id="PikeStore"></ul>
   <script src="app.js"></script>
 </body>
 </html>
