--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <ul id="PikeStore"></ul>
+  <p id="PikePlace"></p>
+  <!-- <ul id="PikePlace"></ul> -->
   <script src="app.js"></script>
 </body>
 </html>
