complete working list

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p id="PikePlace"></p>
-  <!-- <ul id="PikePlace"></ul> -->
+    <p id="PikePlace"></p>
+    <p id="SeaTac"></p>
+    <p id="Southcenter"></p>
+    <p id="BellevueSquare"></p>
+    <p id="Alki"></p>
   <script src="app.js"></script>
 </body>
 </html>
