initial commit, non-working table

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="PikePlace"></p>
+    <table id="Stores">
+    <!-- <p id="PikePlace"></p>
     <p id="SeaTac"></p>
     <p id="Southcenter"></p>
     <p id="BellevueSquare"></p>
-    <p id="Alki"></p>
+    <p id="Alki"></p> -->
+  </table>
   <script src="app.js"></script>
 </body>
 </html>
