--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table id="Stores">
+  <section id="store_data">
     <!-- <p id="PikePlace"></p>
     <p id="SeaTac"></p>
     <p id="Southcenter"></p>
     <p id="BellevueSquare"></p>
     <p id="Alki"></p> -->
-  </table>
+  </section>
   <script src="app.js"></script>
 </body>
 </html>
