structured form html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="store_data">
-    <!-- <p id="PikePlace"></p>
-    <p id="SeaTac"></p>
-    <p id="Southcenter"></p>
-    <p id="BellevueSquare"></p>
-    <p id="Alki"></p> -->
+  <section id="store_data"></section>
+  <section>
+    <form id='add-store' action=" " method="get">
+      <fieldset>
+        <legend>New Cookie Store</legend>
+        <div>
+          <label for="store">Name:</label>
+          <input id='store' type="text" name="store" placeholder="Store Name">
+        </div>
+        <div>
+          <label for="min">Min:</label>
+          <input id='min' type="number" name="min" placeholder="Minimum">
+        </div>
+        <div>
+          <label for="max">Max:</label>
+          <input id='max' type="number" name="max" placeholder="Maximum">
+        </div>
+        <div>
+          <label for="avg">Avg:</label>
+          <input id='avg' type="number" name="avg" placeholder="Average">
+        </div>
+        <button id='submit' type="submit">Submit</button>
+      </fieldset>
+    </form>
   </section>
   <script src="app.js"></script>
 </body>
