index and sales pages laid out

--- a/sales.html
+++ b/sales.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pat's Salmon Cookies</title>
+  <title>Pat's Salmon Cookies Sales</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="store_data"></section>
-  <section>
-    <form id='add-store' action=" " method="get">
-      <fieldset>
-        <legend>New Cookie Store</legend>
-        <div>
-          <label for="store">Name:</label>
-          <input id='store' type="text" name="store" placeholder="Store Name">
-        </div>
-        <div>
-          <label for="min">Min:</label>
-          <input id='min' type="number" name="min" placeholder="Minimum">
-        </div>
-        <div>
-          <label for="max">Max:</label>
-          <input id='max' type="number" name="max" placeholder="Maximum">
-        </div>
-        <div>
-          <label for="avg">Avg:</label>
-          <input id='avg' type="number" name="avg" placeholder="Average">
-        </div>
-        <button id='submit' type="submit">Submit</button>
-      </fieldset>
-    </form>
-  </section>
-  <a href="index.html">Home</a>
+  <div class="header">
+    <h1>Sales</h1>
+  </div>
+  <div class="nav">
+    <a href="index.html">Home</a>
+    <a href="sales.html">Sales</a>
+  </div>
+  <div class="sales-col1">
+    <img src="assets/fishies.jpg" alt="fishies">
+    <img src="assets/fishies.jpg" alt="fishies">
+  </div>
+  <div class="sales-col2">
+    <section id="store_data"></section>
+    <section class="new-data">
+      <form id='add-store' action=" " method="get">
+        <fieldset>
+          <legend>New Cookie Store</legend>
+          <div>
+            <label for="store">Name:</label>
+            <input id='store' type="text" name="store" placeholder="Store Name">
+          </div>
+          <div>
+            <label for="min">Min:</label>
+            <input id='min' type="number" name="min" placeholder="Minimum">
+          </div>
+          <div>
+            <label for="max">Max:</label>
+            <input id='max' type="number" name="max" placeholder="Maximum">
+          </div>
+          <div>
+            <label for="avg">Avg:</label>
+            <input id='avg' type="number" name="avg" placeholder="Average">
+          </div>
+          <button id='submit' type="submit">Submit</button>
+        </fieldset>
+      </form>
+    </section>
+  </div>
+  <div class="sales-col3">
+    <img src="assets/fishies.jpg" alt="fishies">
+    <img src="assets/fishies.jpg" alt="fishies">
+  </div>
+  <div class="footer">
+    <p>&copy; Copyright 2017</p>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
