--- a/index.html
+++ b/index.html
@@ -5,31 +5,37 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="store_data"></section>
-  <section>
-    <form id='add-store' action=" " method="get">
-      <fieldset>
-        <legend>New Cookie Store</legend>
-        <div>
-          <label for="store">Name:</label>
-          <input id='store' type="text" name="store" placeholder="Store Name">
-        </div>
-        <div>
-          <label for="min">Min:</label>
-          <input id='min' type="number" name="min" placeholder="Minimum">
-        </div>
-        <div>
-          <label for="max">Max:</label>
-          <input id='max' type="number" name="max" placeholder="Maximum">
-        </div>
-        <div>
-          <label for="avg">Avg:</label>
-          <input id='avg' type="number" name="avg" placeholder="Average">
-        </div>
-        <button id='submit' type="submit">Submit</button>
-      </fieldset>
-    </form>
-  </section>
+  <div class="salmon-logo">
+    <img src="assets/salmon.png" alt="Salmon logo">
+    <img src="assets/salmon.png" alt="Salmon logo">
+    <img src="assets/salmon.png" alt="Salmon logo">
+  </div>
+  <div class="header">
+    <h1>PAT'S SALMON COOKIES</h1>
+  </div>
+  <div class="nav">
+    <a href="merchandise.html">Merchandise</a>
+    <a href="sales.html">Sales</a>
+  </div>
+  <div class="content">
+    <div class="col1">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class="col2">
+      <ul>
+        <li>Open Mon-Sun</li>
+        <li>24 hours a day!</li>
+        <li>2901 3rd Ave #300, Seattle, WA 98121</li>
+      </ul>
+    </div>
+    <div class="col3">
+      <img src="assets/family.jpg" width="70%" alt="fishy family">
+      <p>Good for the whole family!</p>
+    </div>
+  </div>
+  <div class="footer">
+    <p>&copy; Copyright 2017</p>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
