fixed some layout issues

--- a/merchandise.html
+++ b/merchandise.html
@@ -17,6 +17,10 @@
     <a href="index.html">Home</a>
     <a href="sales.html">Sales</a>
   </div>
+  <div class="tshirt">
+    <img src="assets/shirt.jpg">
+    <p>Coming soon!</p>
+  </div>
 </body>
 <div class="footer">
   <p>&copy; Copyright 2017</p>
