added button to nav; added badge asset

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>PAT'S SALMON COOKIES</h1>
   </div>
   <div class="nav">
-    <a href="merchandise.html">Merchandise</a>
-    <a href="sales.html">Sales</a>
+      <a class="merch-button" href="merchandise.html">Merchandise</a>
+      <a class="sales-button" href="sales.html">Sales</a>
   </div>
   <div class="content">
     <div class="col1">
