--- a/sales.html
+++ b/sales.html
@@ -9,8 +9,12 @@
     <h1>Sales</h1>
   </div>
   <div class="nav">
-    <a href="index.html">Home</a>
-    <a href="sales.html">Sales</a>
+    <button class="merch-button">
+      <a href="merchandise.html">Merchandise</a>
+    </button>
+    <button class="sales-button">
+      <a href="sales.html">Sales</a>
+    </button>
   </div>
   <div class="sales-col1">
     <img src="assets/fishies.jpg" alt="fishies">
