--- a/merchandise.html
+++ b/merchandise.html
@@ -14,8 +14,8 @@
     <h1>Merchandise</h1>
   </div>
   <div class="nav">
-    <a href="index.html">Home</a>
-    <a href="sales.html">Sales</a>
+    <a class="home-button" href="index.html">Home</a>
+    <a class="sales-button" href="sales.html">Sales</a>
   </div>
   <div class="tshirt">
     <img src="assets/shirt.jpg">
