added borders; consistent design across all pages

--- a/merchandise.html
+++ b/merchandise.html
@@ -18,8 +18,12 @@
     <a class="sales-button" href="sales.html">Sales</a>
   </div>
   <div class="tshirt">
-    <img src="assets/shirt.jpg">
+    <div class="tshirtbox">
+      <img src="assets/shirt.jpg">
+    </div>
+    <div class="textbox">
     <p>Coming soon!</p>
+    </div>
   </div>
 </body>
 <div class="footer">
