--- a/sales.html
+++ b/sales.html
@@ -9,12 +9,8 @@
     <h1>Sales</h1>
   </div>
   <div class="nav">
-    <button class="merch-button">
-      <a href="merchandise.html">Merchandise</a>
-    </button>
-    <button class="sales-button">
-      <a href="sales.html">Sales</a>
-    </button>
+      <a class= "merch-button" href="merchandise.html">Merchandise</a>
+      <a class="home-button" href="index.html">Home</a>
   </div>
   <div class="sales-col1">
     <img src="assets/fishies.jpg" alt="fishies">
