added salmon logo on top of header

--- a/sales.html
+++ b/sales.html
@@ -5,6 +5,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="salmon-logo">
+    <img src="assets/salmon.png" alt="Salmon logo">
+  </div>
+
   <div class="header">
     <h1>Sales</h1>
   </div>
@@ -17,7 +21,8 @@
     <img src="assets/fishies.jpg" alt="fishies">
   </div>
   <div class="sales-col2">
-    <section id="store_data"></section>
+    <section id="store_data">
+    </section>
     <section class="new-data">
       <form id='add-store' action=" " method="get">
         <fieldset>
